plugins {
    id("com.gradleup.shadow") version "9.2.2" apply false
}

allprojects {
    group = 'me.m0dii'
    version = '1.0.0-SNAPSHOT'
    repositories {
        mavenCentral()
        maven { name = 'Modrinth'; url = 'https://api.modrinth.com/maven' }
        maven { url = 'https://maven.wispforest.io/releases/' }
        maven { url = 'https://maven.shedaniel.me/' }
        maven { url = 'https://maven.terraformersmc.com/releases/' }
    }
}

// subproject common defaults
subprojects {
    apply plugin: 'java-library'

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21

        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    jar {
        archiveBaseName.set(project.name)
    }
}

